[package]
name = "svm"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["VisualDevelopment"]
license = "CC BY-NC-ND 4.0"

[profile.dev]
lto = "thin"

[profile.release]
lto = "thin"

[dependencies]
packed_struct = { version = "0.10.0", default-features = false }
static_assertions = "1.1.0"
bit = "0.1.1"
amd64 = { path = "../amd64" }
