[package]
name = "svm"
version = "0.1.0"
description = "The BoxOS SVM implementation crate"
edition = "2021"
publish = false
authors = ["ChefKiss Inc"]
license-file = "LICENSE"

[profile.release]
lto = true

[dependencies]
amd64 = { path = "../AMD64Lib" }
modular-bitfield = { version = "0.11.2", git = "https://github.com/ChefKissInc/modular-bitfield" }
